--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@g-loot/react-tournament-brackets": "^1.0.31-rc",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -24,12 +25,15 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.20.5",
     "@types/bcryptjs": "^2.4.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "postgres": "^3.4.4",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
@@ -48,6 +52,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
