--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.20.5",
+    "@tanstack/react-table": "^8.20.1",
     "@types/bcryptjs": "^2.4.6",
     "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^2.4.3",
